--- a/src/style/style.css
+++ b/src/style/style.css
@@ -58,8 +58,14 @@
   margin-top: 5em;
   padding: 1em;
   position: absolute;
-  text-align: center;
   width: 100%;
+  text-align: center;
+}
+
+.linkedin {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .imagemProduct {
